src/test/deca/codegen/valid/class/calls/return_other_class.deca
// Description:
//    Utilisation de la selection et affichage
//
// Resultats:
//    ima_output: socrateplatonsocrate
// 

class Socrate {

    Socrate retourneSoiMeme(){
        return new Socrate();
    }

    void quiSuisJe(){
        print("socrate");
    }
}

class Platon{
    Socrate retourneSocrate(){
        return new Socrate();
    }
    void quiSuisJe(){
        print("platon");
    }
}

{
    Platon p = new Platon();
    Socrate s = p.retourneSocrate();
    s.quiSuisJe();
    p.quiSuisJe();
    Socrate s1 = s.retourneSoiMeme();
    s1.quiSuisJe();
}

