src/test/deca/codegen/invalid/class/stack_overflow/overflow_new.deca
// Description:
//    Tests de débordement de la pile
//
// Resultats:
//   ima_output: stack overflow
//

class Platon {
    Platon p = new Platon();
}

{
    Platon p = new Platon();
}

